--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "next": "^7.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
+  },
+  "devDependencies": {
+    "tachyons": "^4.10.0"
   }
 }
